# display3d

./: Cargo.toml  README.md
src/: display_model.rs  main.rs  shaders.rs
src/display_model/: debug_manager.rs
src/init/: config.rs  convert_to_mesh3d.rs
src/init/convert_to_mesh3d/: obj.rs  stl.rs
