[package]
name = "display3d"
description = "A tool to display 3d objects in the terminal"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/renpenguin/display3d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stl", "obj"]
stl = ["dep:stl_io"]
obj = ["dep:tobj"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
ctrlc = "3.4.5"
gemini-engine = "1.0.1"
glam = "0.28.0"
stl_io = {version = "0.8.2", optional = true }
tobj = {version = "4.0.3", optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
